feat: 更新HTML结构，添加控制按钮并实现重置和显示角度功能

--- a/index.html
+++ b/index.html
@@ -1,14 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
   <meta charset="utf-8" />
-  <title></title>
+  <title>一阶魔方</title>
 </head>
 
 <body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
+  <div class="controls">
+    <button id="btn-reset">重置</button>
+    <button id="btn-rotate">显示角度</button>
+  </div>
+
+  <style>
+    body {
+      display: flex;
+    }
+
+    .controls {
+      width: 200px;
+      padding: 20px;
+      border-left: 1px solid #ddd;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    button {
+      padding: 10px 15px;
+      font-size: 14px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+  </style>
+
 </body>
 
 </html>
