feat: 更新canvas.js中的脚本加载顺序，添加cuon-mv.js依赖；新增cube-main.js以处理立方体逻辑

--- a/cube.html
+++ b/cube.html
@@ -8,7 +8,7 @@
 
 <body>
   <div id="app"></div>
-  <script type="module" src="/src/main.js"></script>
+  <script type="module" src="/src/cube-main.js"></script>
   <div class="controls">
     <button id="btn-reset">重置</button>
     <button id="btn-rotate">显示角度</button>
